AI-JADEDEVS4/src/objects/TriggerSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Enables/disables triggers. Utilized by Apex trigger handler classes.</description>
    <fields>
        <fullName>Account_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Trigger_Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BookingDetail_Trigger_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BookingDetail Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CampaignTrigger_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CampaignTrigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Trigger_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Event Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Line_Item_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Line Item Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Opportunity Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Document_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Quote Document Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Line_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Quote Line Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quote_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Quote Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Subscription_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Subscription Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Trigger_Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Task Trigger Enabled</label>
        <type>Checkbox</type>
    </fields>
    <label>Trigger Settings</label>
</CustomObject>